# semi-xmlrpc-tester

./: .gitignore  Cargo.toml  README.md  pokus
assets/15sp2/: bind.json  branch-network.json  config.json  dhcpd.json  pxe.json  saltboot.json  saltboot.xml  tftpd.json  vsftpd.json
examples/: suma-bv-41-terminal-sles11sp4.xml  suma-bv-41-terminal-sles12sp4.xml  suma-bv-41-terminal-sles15sp2.xml
src/: main.rs  scenarios.rs  support.rs
